[metadata]
name = hookline-sdk
version = 0.1.0
description = SDK for developing Hookline-compatible plugins with decorators and version registry
long_description = file: README.md
long_description_content_type = text/markdown
author = Somye Mahajan
author_email = mahajan.somye@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/sommye-ctr/hookline-sdk
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    packaging>=24.0

[options.packages.find]
where = src
